   DECIMAL-POINT IS COMMA clause is in effect);
   as with previous versions the argument can be validated before using the
   FUNCTIONs TEST-NUMVAL, TEST-NUMVAL-C, TEST-NUMVAL-F or the exception can
   be checked afterwards using the EXCEPTION related functions;
   the old behaviour can be enforced by compiling GnuCOBOL with
   CPPFLAGS=-DINVALID_NUMVAL_IS_ZERO

** ORGANIZATION INDEXED (with BDB backend): internal changes in record and
   file locking, fixing some related bugs

* Changes that potentially effects recompilation of existing programs:

** the reserved word list and intrinsic functions was updated, especially
   to cater for new features of COBOL 2022; if compiling with any non-strict
   dialect you may need to unreserve any conflicting words / functions

** in 64-bit environments, the default size for BY VALUE parameters has changed:
   If no explicit SIZE IS clause is specified,
	old behavior: parameter passed as 32-bit value
	new behavior: parameter passed as 64-bit value
   To specify a 32-bit BY VALUE parameter, change the COBOL source to use
   SIZE IS 4.  To continue to rely on the default size, both caller and
   callee modules that use BY VALUE must be compiled with the same version of
   GnuCOBOL, either prior this release, or since.

* Changes to the COBOL compiler (cobc) options:

** new -fformat dialect option, and extended SOURCE FORMAT directives, with
   the following newly supported reference-formats (in addition to
   FIXED/FREE):

   COBOL85              Fixed-form format with enforcement of Area A
   COBOLX		GCOS 7 extended format
   CRT			ICOBOL Free-form format
   TERMINAL		ACUCOBOL-GT Terminal format
   VARIABLE		Micro Focus Variable Fixed-form format
   XCARD		ICOBOL xCard (extended card) format
   XOPEN		X/Open Free-form format

   These formats come with Area A enforcement, that checks whether
   division, section, and paragraph names start in Area A (i.e, before